log
Wed 27 Sep 2023 07:18:48 PM UTC: 
 tests:  0|4
total_score: 0/70
45cc1fa
Thu 28 Sep 2023 05:12:53 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:28: error: implicit declaration of function ‘mlloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                            ^~~~~
      |                            malloc
heap.c:36:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
6e23545
Thu 28 Sep 2023 05:13:04 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:28: error: implicit declaration of function ‘mlloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                            ^~~~~
      |                            malloc
heap.c:36:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                     ^
heap.c:39:51: error: ‘heaElem’ undeclared (first use in this function); did you mean ‘heapElem’?
   39 |     newHeap->heapArray = (heapElem*)malloc(sizeof(heaElem) * newHeap->capac);
      |                                                   ^~~~~~~
      |                                                   heapElem
heap.c:39:51: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
35dc8bb
Thu 28 Sep 2023 05:13:15 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:28: error: implicit declaration of function ‘mlloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                            ^~~~~
      |                            malloc
heap.c:36:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   36 |     Heap* newHeap = (Heap*)mlloc(sizeof(Heap));
      |                     ^
heap.c:39:37: error: implicit declaration of function ‘maloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   39 |     newHeap->heapArray = (heapElem*)maloc(sizeof(heaElem) * newHeap->capac);
      |                                     ^~~~~
      |                                     malloc
heap.c:39:50: error: ‘heaElem’ undeclared (first use in this function); did you mean ‘heapElem’?
   39 |     newHeap->heapArray = (heapElem*)maloc(sizeof(heaElem) * newHeap->capac);
      |                                                  ^~~~~~~
      |                                                  heapElem
heap.c:39:50: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
42744d0
Thu 28 Sep 2023 05:13:46 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
d983d53
Thu 28 Sep 2023 05:14:12 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:24: error: implicit declaration of function ‘retun’ [-Werror=implicit-function-declaration]
   21 |     if (pq->size == 0) retun NULL;
      |                        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
ab62655
Thu 28 Sep 2023 05:14:36 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:24: error: implicit declaration of function ‘retrun’ [-Werror=implicit-function-declaration]
   21 |     if (pq->size == 0) retrun NULL;
      |                        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c0f05f
